--- a/web/index.html
+++ b/web/index.html
@@ -47,12 +47,19 @@
         -moz-osx-font-smoothing: grayscale;
         -ms-overflow-style: scrollbar;
       }
+      :-webkit-scrollbar {
+        width: 0px;
+      }
+
+      *:focus {
+        outline: none;
+      }
       /* Enable for apps that support dark-theme */
-      /*@media (prefers-color-scheme: dark) {
+      /* @media (prefers-color-scheme: dark) {
         body {
           background-color: black;
         }
-      }*/
+      } */
     </style>
   </head>
 
